--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="magic.css" />
+<head> <meta name="viewport" content="width=device-width, initial-scale=1"> </head>
 
 <body class="bg-grad">
 
