--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="magic.css" />
-<head> <meta name="viewport" content="width=device-width, initial-scale=1"> </head>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100..800&display=swap" rel="stylesheet">
+</head>
 
 <body class="bg-grad">
 
