--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="magic.css" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script> <!-- Include Anime.js -->
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
